# taberando

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: build.yml  ci.yml
server/: .gitignore  Cargo.toml  build.rs
server/resources/line/: add.html
server/src/: app.rs  gcp.rs  http.rs  lib.rs  line.rs
server/src/app/: agent.rs  agent_line_user.rs  coordinates.rs  core.rs  jar.rs  user_action.rs
server/src/bing/: http.rs
server/src/gcp/: api.rs  client.rs  constants.rs  firebase.rs  http_api.rs  meal.rs  migration_v2.rs  oauth.rs
server/src/line/: .gitignore  add.html  api.rs  autoclose.html  bot.rs  html.rs  http.rs  json.rs  menu.rs  webhook.rs
server/src/menus/: default.json  refresh.json  reply.json
