[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "line"
path = "src/bin/line_cli.rs"

[[bin]]
name = "local_tunnel"
path = "src/bin/local_tunnel.rs"

[[bin]]
name = "migration_v2"
path = "src/bin/migration_v2.rs"

[[bin]]
name = "geo_location"
path = "src/bin/geo_location.rs"

[build-dependencies]
serde_json = "1.0.74"

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
async-trait = "0.1.52"
env_logger = "0.9.0"
tokio = { version = "1.18.4", features = ["full"] }
futures = "0.3.25"
warp = "0.3.2"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
regex = "1.5.5"
rand = "0.8.4"
clap = { version = "3.0.10", features = ["derive"] }
# GCP OAuth
yup-oauth2 = "6.2.0"
# Crypto
ring = "0.16.20"
base64 = "0.13.0"